- modify a stylesheet file, common.css. The stylesheet "common.css" was modified to fix a table contents size that doesn't fit with the main container.

--- a/WEB/style/common.css
+++ b/WEB/style/common.css
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css');
 *{margin:0; padding:0; box-sizing:border-box;
-letter-spacing:0.05rem; font-size:1.3rem}
+letter-spacing:0.05rem; font-size:1.3rem;}
 
 :root{
     --theme-text-color:#000;
     --nav-current-color:#25c;
 }
 html,body{width:100vw;height:100vh;overflow:hidden; position:relative; font-size:0.9rem;font-family: 'NanumSquare';}
+nav.GNB>ul{height:100%; padding:2%;}nav.GNB li{margin:0.5rem 0;}
+main{ padding:2%; overflow-y:auto; overflow-x:hidden; width:80%; height:100%; z-index:0;}
+footer .copyright{ text-align: center }
+footer .logo{vertical-align: middle; filter:invert(1);}
+section{margin:1rem 0;}
+h2{margin-bottom:1.2rem;}
+h3{margin-bottom:1rem;}
 ul{list-style:none;}
-ol{margin-left:1.1rem; width:95%; padding-left:0.7rem;}
+ol{padding-left:1.2rem;}
 
 ol.type{
     list-style:none;
+}
+ol.type li{
+    margin-left:-0.9rem;
 }
 ol.type.Hangul{
     counter-reset:KOREAN;
@@ -32,27 +42,19 @@ ol.type.Hangul-consonant>li::before{
 }
 p{margin:0.25rem 0;}
 
-.middle-wrap{height:85%;}
+.middle-wrap{height:85%; width:100%;}
 header{width:100%;height:10%;}footer{width:100%; height:5%;}
 header h1{height:100%;margin:0; display:flex; align-items: center;}
 .logo{ flex-basis: 10%; margin:0 auto;}
 .logo>img{display:block; width:100%;}
 header,footer,nav.GNB{z-index:2;
 border:solid 1px transparent;}
-table{border-collapse:collapse; width:80%; margin:1% 0; }
-table td,table th{border:solid 1px; padding:0.2rem;}
-.middle-wrap:after{content:"";display:block;clear:both;}
-nav.GNB{float:left;width:20%;height:100%; padding:0.5rem 0; overflow:hidden;overflow-y:auto;
-    border-width:0 1px;
-}
-nav.GNB>ul{height:100%; padding:2%;}nav.GNB li{margin:0.5rem 0;}
-main{ padding:2%; overflow-y:auto; overflow-x:hidden; width:80%; height:100%; z-index:0;}
-footer .copyright{ text-align: center }
-footer .logo{vertical-align: middle; filter:invert(1);}
+col.col1{width:25%;}
 
-section{margin:1rem 0;}
-h2{margin-bottom:1.2rem;}
-h3{margin-bottom:1rem;}
+table{border-collapse:collapse; width:80%; margin:1% 0;}
+table td,table th{border:solid 1px; padding:0 0.2rem;}
+.middle-wrap:after{content:"";display:block;clear:both;}
+nav.GNB{float:left;width:20%;height:100%;padding:0.5rem 0;overflow:hidden;overflow-y:auto;border-width:0 1px;}
 
 /*Light And Default */
 
@@ -119,7 +121,8 @@ footer{border-color:
         rgba(255,255,255,0.4)
     ;}
 
-    footer{border-color:
+    footer{
+        border-color:
         rgba(255,255,255,0.8)
         rgba(255,255,255,0.4)
         rgba(255,255,255,0.2)
@@ -138,8 +141,8 @@ footer{border-color:
 }
 
 
-@media screen and (max-width:768px){
-    *{font-size:1.1rem;}
+@media screen and (min-width:100px) and (max-width:768px){
+    *{font-size:1rem;}
     header{height:10%;}
     .logo{ flex-basis: 35%;}
     .middle-wrap{height:80%; width:100%;}
@@ -153,16 +156,19 @@ footer{border-color:
         rgba(0,0,0,0.8)
         rgba(0,0,0,0.4);
     }
-    main{height:85%; width:100%}
+    main{height:85%; width:100%;}
     footer{
         display:flex;
         height:10%;
         justify-content: center;
     }
-
     footer>*{
         align-self: center;
     }
+    table{
+        width:100%;
+    }
+    col.col1{width:30%;}
 }
 
 @media screen and (max-width:768px) and (prefers-color-scheme:dark){
